--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <header>
+        <h1>Prueba github</h1>
         <h1>Tienda</h1>
         <h3 class="animate__animated animate__backInDown">BIENVENIDO</h3>
         <div class="container-icon">
